tests/script/negative/enum/incomplete_match.s
type T = A | B | C;

@initial
foo(T it) {
  x = case(it) {
        A -> 1;
        B -> 2
      };
  terminate();
}


